--- a/chat-landing/package.json
+++ b/chat-landing/package.json
@@ -21,7 +21,9 @@
     "posthog-js": "^1.313.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.4",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
