--- a/chat-landing/package.json
+++ b/chat-landing/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@elevenlabs/react": "^0.12.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
